# futedata

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  analytics.py  databricks.yml  docker-compose.yml  predict.py  pyproject.toml  run_football_data.py  run_load.py  run_transfermarkt.py  run_transform.py  run_validator.py  scratch_check_leagues.py  scratch_create_tables.py  scratch_debug_load.py  scratch_generate_insert.py  scratch_insert.sql
docs/: api_sources.md  architecture.md  data_dictionary.md
frontend/: Dockerfile
frontend/src/: App.jsx  index.css
src/futedata/: __init__.py  config.py  constants.py  spark.py
src/futedata/api/: main.py
src/futedata/collectors/: base.py  fbref_mock.py  football_data.py  statsbomb.py  transfermarkt.py
src/futedata/db/: create_master_view.py  schema.sql
src/futedata/transformers/: __init__.py  base.py  clubs.py  games.py  matches.py  players.py  standings.py  transfers.py  valuations.py
src/futedata/utils/: io.py  logging.py  match_teams.py
src/futedata/validators/: __init__.py  raw_validator.py
terraform/: iam.tf  main.tf  rds.tf  s3.tf  secrets.tf
tests/: test_collectors.py
