[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futedata"
version = "0.1.0"
description = "ScoutMarket Lakehouse — Football transfer market analytics platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FuteData Team"},
]

dependencies = [
    # HTTP & API
    "httpx>=0.27.0",
    "tenacity>=8.2.0",

    # Data processing
    "soccerdata>=1.6.3",
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyspark>=3.5.0",
    "delta-spark>=3.1.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Logging & observability
    "structlog>=24.1.0",
    "rich>=13.7.0",

    # CLI
    "click>=8.1.0",

    # Hashing & validation
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
    "pre-commit>=3.6.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
aws = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.scripts]
futedata = "futedata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["futedata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external APIs",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["xxhash.*"]
ignore_missing_imports = true
